syntax = "proto3";
package approval;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/JJnvn/Software-Arch-CPRoom/backend/proto;proto";


service ApprovalService {
  rpc ListPending(ListPendingRequest) returns (ListPendingResponse);
  rpc ApproveBooking(ApproveRequest) returns (ApproveResponse);
  rpc DenyBooking(DenyRequest) returns (DenyResponse);
  rpc ReassignApprover(ReassignRequest) returns (ReassignResponse);
  rpc GetAuditTrail(GetAuditTrailRequest) returns (AuditTrailResponse);
}

message ListPendingRequest {
  string staff_id = 1;
}

message ListPendingResponse {
  repeated PendingBooking pending = 1;
}

message PendingBooking {
  string booking_id = 1;
  string room_id = 2;
  string user_id = 3;
  google.protobuf.Timestamp start = 4;
  google.protobuf.Timestamp end = 5;
}

message ApproveRequest {
  string booking_id = 1;
  string staff_id = 2;
}

message ApproveResponse {
  bool success = 1;
}

message DenyRequest {
  string booking_id = 1;
  string staff_id = 2;
  string reason = 3;
}

message DenyResponse {
  bool success = 1;
}

message ReassignRequest {
  string booking_id = 1;
  string new_staff_id = 2;
}

message ReassignResponse {
  bool success = 1;
}

message GetAuditTrailRequest {
  string booking_id = 1;
}

message AuditTrailResponse {
  repeated AuditEvent events = 1;
}

message AuditEvent {
  string event_id = 1;
  string booking_id = 2;
  string staff_id = 3;
  string action = 4; // approve/deny/reassign
  string reason = 5;
  google.protobuf.Timestamp created_at = 6;
}
